Do not process HTML with QDomDocument

BUG: 510945

`QDomDocument` was used to replace `<del>` tags in Discount's output with `<s>` tags.

`QDomDocument::setContent()` parses XML only. This usually works, because Discount's HTML is usually valid XML. However, since it is in "Smartypants" mode, Discount generates named character references in response to certain inputs, e.g. `(c)` -> `&copy;` and `...` -> `&hellip;`. These are valid HTML, but most are not predefined in standard XML, and so QDomDocument refuses to parse them.

This MR uses `QString::replace()` in place of `QDomDocument`.

I know it's generally frowned upon to process HTML by such simple approaches, but within the constraints of HTML which Discount generates, I can't see a way that this could go wrong.